# AuD-Exercises

./: CMakeLists.txt  create_new_subproject.sh
001_01_Collatz/: CMakeLists.txt  main.cpp
001_02_Hanoi/: CMakeLists.txt  ConsoleVisualHanoiMover.h  HanoiGame.cpp  HanoiGame.h  HanoiMover.h  HanoiSolver.cpp  HanoiSolver.h  HanoiTower.h  TextOutputHanoiMover.h  main.cpp
002_05/: CMakeLists.txt  main.cpp
002_06_ggT/: CMakeLists.txt  main.cpp
002_07_Harmonische_Reihe/: CMakeLists.txt  main.cpp
003_08_PI/: CMakeLists.txt  main.cpp
003_09_PrintCharArray/: CMakeLists.txt  main.cpp
004_13_Fibonacci/: CMakeLists.txt  main.cpp
004_14_BinarySearch/: CMakeLists.txt  Vektor.cpp  Vektor.h  main.cpp
004_15/: CMakeLists.txt  main.cpp
005_19_Factorial/: CMakeLists.txt  main.cpp
006_20_Stack/: CMakeLists.txt  Stack.h  main.cpp
006_21_InfixToPostfix/: CMakeLists.txt  Lexer.cpp  Lexer.h  Operators.cpp  Operators.h  infix_to_postfix.cpp  infix_to_postfix.h  main.cpp
006_22_PostfixEval/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt  main.cpp
