# CMakeList.txt : CMake project for AuD-Exercises, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (001_02_Hanoi "main.cpp" "HanoiSolver.cpp" "HanoiGame.cpp")

# TODO: Add tests and install targets if needed.
